# normedtuple

./: pyproject.toml
docs/: CNAME  index.html
src/normedtuple/core/: __init__.py
