[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0,<62",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "norming>=0.0.0.dev0",
]
description = "This project allows for creating normed tuple classes."
keywords = []
name = "normedtuple"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.0.2+local"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/normedtuple/#files"
Index = "https://pypi.org/project/normedtuple/"
Source = "https://github.com/johannes-programming/normedtuple/"
Website = "https://normedtuple.johannes-programming.online/"
